# seraphs-

./: .env.example  .gitignore  AGENT1_TEST_RESULTS.md  AGENT2_TEST_RESULTS.md  AGENTS_6_12_STATUS.md  COMPLETE_SYSTEM_EXPLANATION.txt  COMPLETE_SYSTEM_STATUS.md  DASHBOARD_ACCESS.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_SUCCESS.md  FINAL_SYSTEM_OVERVIEW.md  FRONTEND_PLANNING_PROFESSIONAL.txt  GITHUB_DEPLOYMENT_GUIDE.md  OUTPUT_LOG.txt  PHASE2_COMPLETE.md  PHASE3_COMPLETE.md  PHASE4_COMPLETE.md  PRODUCTION_ENHANCEMENTS_COMPLETE.md  PROJECT_COMPLETE_SUMMARY.md  PROJECT_SUMMARY.md  Procfile  QUICKSTART.md  README.md  README_DEPLOYMENT.md  TERMINAL_OUTPUT_COMPLETE.txt  VERCEL_DEPLOYMENT_GUIDE.md  api_backend.py  dashboard.py  demo_agent1.py  demo_detailed_output.py  demo_production.py  demo_simple.py  demo_standalone.py  deploy.py  deploy.sh  docker-compose.yml  launch_dashboard.sh  pyproject.toml  requirements.txt  run_live_monitoring.py  (+9 more)
.github/workflows/: deploy.yml
agents/agent_10_ui/: api.py  dashboard.html  detailed_dashboard.html  live_dashboard.html
agents/agent_11_ops/: agent.py
agents/agent_12_orchestrator/: agent.py
agents/agent_1_ingestion/: agent.py  tools.py
agents/agent_2_auth/: agent.py  (+1 more)
config/: sources.yaml
docs/: LLM_SKILLS_GUIDE.md  REALTIME_24_7_SETUP.md  agent1-output-examples.md  architecture.md  phase1-detailed-plan.md  phase2-detailed-plan.md  quickstart.md
frontend/: ERRORS_FIXED.md  ERROR_FIXED.md  FINAL_FIX_COMPLETE.md  FRONTEND_STATUS.md  LAYOUT_UPDATED.md  PRODUCTION_READY.md  PURPLE_THEME_APPLIED.md  README.md  REBUILD_COMPLETE.md  SERVER_READY.md  SETUP_GUIDE.md  SYSTEM_VERIFIED.md  THEME_RESTORED.md  THEME_UPDATE.md  TROUBLESHOOTING.md  TYPOGRAPHY_UPDATED.md  VERIFICATION_COMPLETE.md  index.html  tailwind.config.js  vite.config.ts
schemas/: events.py
tasks/: todo.md
tests/: test_agent_1.py
utils/: cardano_anchor.py  config.py  event_bus.py  ipfs_client.py  llm_client.py  logger.py  scheduler.py  semantic_similarity.py
(+50 files in other folders)
